--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,22 +3,31 @@
     package="com.gimeno.enric.infobilbao">
 
     <application
+        android:name=".InfoBilbao"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/BilbaoTheme">
         <activity
-            android:name="com.gimeno.enric.infobilbao.InfoBilbao"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:name=".activity.ListAlertActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".activity.AlertActivity"
+            android:theme="@style/BilbaoTheme.Dialog"/>
+
+        <provider
+            android:authorities="es.infobilbao.alerts"
+            android:name=".db.BilbaoFeedsProvider"/>
+
     </application>
 
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
